基本完成注册、登录验证页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         <activity
             android:name=".entry.MainActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:noHistory="true"
             android:screenOrientation="portrait">
             <!--<intent-filter>-->
             <!--<action android:name="android.intent.action.MAIN"/>-->
@@ -25,7 +24,6 @@
         <activity
             android:name=".account.LoginActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:noHistory="true"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -37,7 +35,13 @@
         <activity
             android:name=".account.RegisterActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
-            android:noHistory="true"
+            android:screenOrientation="portrait">
+        </activity>
+
+        <activity
+            android:name=".account.VerifyActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:label="@string/activity_verify_title"
             android:screenOrientation="portrait">
         </activity>
 
