--- a/libs/mediapicker/build.gradle
+++ b/libs/mediapicker/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        minSdkVersion 11
+        minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -23,4 +23,6 @@ dependencies {
     compile 'com.android.support:support-v4:22.2.0'
 
     compile 'com.github.bumptech.glide:glide:3.6.1'
+
+    compile project(":base")
 }
