--- a/libs/mediapicker/src/main/AndroidManifest.xml
+++ b/libs/mediapicker/src/main/AndroidManifest.xml
@@ -1,9 +1,34 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="cn.iam007.mediapicker">
+<manifest
+    package="cn.iam007.mediapicker"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application android:allowBackup="true"
-                 android:label="@string/app_name"
-        >
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name">
+
+        <activity
+            android:name=".ui.MediaPickerActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/MediaPickerTheme"/>
+        <activity
+            android:name=".ui.MediaPreviewActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/MediaPickerTheme"/>
+        <!-- sample -->
+        <activity
+            android:name=".sample.SampleActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
 
     </application>
 
