--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,6 @@
 include ':app'
+include ':mediapicker'
 include ':base'
 
 project(':base').projectDir = new File(rootProject.projectDir, 'libs/base/app')
+project(':mediapicker').projectDir = new File(rootProject.projectDir, 'libs/mediapicker')
