1.  完善多媒体选择控件

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,18 +11,18 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".entry.MainActivity"
+            android:name=".test.TestActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:screenOrientation="portrait">
             <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN"/>-->
+                <!--<action android:name="android.intent.action.MAIN"/>-->
 
-            <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+                <!--<category android:name="android.intent.category.LAUNCHER"/>-->
             <!--</intent-filter>-->
         </activity>
 
         <activity
-            android:name=".account.LoginActivity"
+            android:name=".entry.MainActivity"
             android:configChanges="keyboard|keyboardHidden|orientation"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -30,6 +30,17 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".account.LoginActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation"
+            android:screenOrientation="portrait">
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN"/>-->
+
+            <!--<category android:name="android.intent.category.LAUNCHER"/>-->
+            <!--</intent-filter>-->
         </activity>
 
         <activity
@@ -46,13 +57,13 @@
         </activity>
 
         <!-- Debug使用 -->
-        <activity
-            android:name=".test.HalfActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation"
-            android:label="@string/activity_verify_title"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Dialog">
-        </activity>
+        <!--<activity-->
+        <!--android:name=".test.HalfActivity"-->
+        <!--android:configChanges="keyboard|keyboardHidden|orientation"-->
+        <!--android:label="@string/activity_verify_title"-->
+        <!--android:screenOrientation="portrait"-->
+        <!--android:theme="@style/Theme.AppCompat.Dialog">-->
+        <!--</activity>-->
 
         <meta-data
             android:name="leancloud"
