--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,4 +132,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.1.1'
 
     compile project(":base")
+    compile project(":mediapicker")
 }
